@@ -22,8 +22,16 @@
 #elif (defined OS2)
 #  define PHYSFS_PLATFORM_OS2
 #elif ((defined __MACH__) && (defined __APPLE__))
-#  define PHYSFS_PLATFORM_MACOSX
-#  define PHYSFS_PLATFORM_POSIX
+/* To check if iphone or not, we need to inlcude this file */
+# include <TargetConditionals.h> 
+# if (defined(TARGET_IPHONE_SIMULATOR) || (defined TARGET_OS_IPHONE))
+#    define PHYSFS_PLATFORM_UNIX
+#    define PHYSFS_PLATFORM_POSIX
+#    define PHYSFS_NO_CDROM_SUPPORT
+#  else
+#    define PHYSFS_PLATFORM_MACOSX
+#    define PHYSFS_PLATFORM_POSIX
+#  endif
 #elif defined(macintosh)
 #  error Classic Mac OS support was dropped from PhysicsFS 2.0. Move to OS X.
 #elif defined(unix)
