@@ -2,6 +2,7 @@
  * CHANGELOG.
  */
 
+11022008 - iPhone support (thanks, Christian!)
 04032008 - Fixed PHYSFS_openAppend() to work as documented on Unix.
 03122008 - Fixed aliasing bug in Windows platform layer (thanks, Dennis!).
 03102008 - Changed some text files from ISO-8859-1 to UTF-8. Replaced all the
